--- a/styles/main.css
+++ b/styles/main.css
@@ -25,25 +25,30 @@
     font-size: 12px;
     line-height: 60px;
     margin-left: 20px;
-    text-transform: uppercase; }
-  .menu__list:hover {
-    color: #00acdc; }
+    text-transform: uppercase;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between; }
+    .menu__list:hover {
+      color: #00acdc; }
 
 .is-active {
   margin-left: 0;
   color: #00acdc;
   position: relative; }
-
-.is-active::after {
-  position: absolute;
-  content: "";
-  width: 37px;
-  height: 4px;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background: #00acdc;
-  border-radius: 2px; }
+  .is-active::after {
+    position: absolute;
+    content: "";
+    width: 37px;
+    height: 4px;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: #00acdc;
+    border-radius: 8px; }
 
 .main {
   -webkit-box-sizing: border-box;
@@ -60,11 +65,9 @@
           justify-content: space-between;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  margin: 0 auto;
+  margin: 50px auto 0;
   padding-left: 40px;
   padding-right: 40px;
-  padding-top: 50px;
-  padding-bottom: 50px;
   max-width: 1024px; }
 
 .card {
@@ -155,25 +158,41 @@
     line-height: 40px;
     text-transform: uppercase;
     margin-top: 20px; }
-  .card__buy:hover {
-    background-color: #fff;
-    border: 1px solid #00acdc;
-    color: #00acdc; }
+    .card__buy:hover {
+      background-color: #fff;
+      border: 1px solid #00acdc;
+      color: #00acdc; }
 
 .stars {
-  width: 91px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
-          justify-content: space-between; }
-  .stars__star:nth-child(-n+4) {
+          justify-content: space-between;
+  width: 91px; }
+  .stars div:nth-child(-n + 5) {
+    background: url("../images/star.svg") no-repeat;
+    width: 15px;
+    height: 15px; }
+  .stars-1 .stars__star:nth-child(-n+1) {
     background: url("../images/star-active.svg") no-repeat;
     width: 15px;
     height: 15px; }
-  .stars__star:last-child {
-    background: url("../images/star.svg") no-repeat;
+  .stars-2 .stars__star:nth-child(-n+2) {
+    background: url("../images/star-active.svg") no-repeat;
+    width: 15px;
+    height: 15px; }
+  .stars-3 .stars__star:nth-child(-n+3) {
+    background: url("../images/star-active.svg") no-repeat;
+    width: 15px;
+    height: 15px; }
+  .stars-4 .stars__star:nth-child(-n+4) {
+    background: url("../images/star-active.svg") no-repeat;
+    width: 15px;
+    height: 15px; }
+  .stars-5 .stars__star:nth-child(-n+5) {
+    background: url("../images/star-active.svg") no-repeat;
     width: 15px;
     height: 15px; }
 
@@ -187,5 +206,16 @@ html {
 
 a {
   text-decoration: none; }
+
+h1 {
+  visibility: hidden;
+  height: 0;
+  width: 0; }
+
+li {
+  list-style: none; }
+
+ul {
+  list-style: none; }
 
 /*# sourceMappingURL=main.css.map */
