--- a/styles/main.css
+++ b/styles/main.css
@@ -13,12 +13,16 @@
     margin-left: 50px;
     margin-top: 10px; }
 
-.menu {
+.nav {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   margin-right: 50px; }
-  .menu__list {
+  .nav__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex; }
+  .nav__link {
     text-decoration: none;
     color: black;
     font-weight: 500;
@@ -32,7 +36,7 @@
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between; }
-    .menu__list:hover {
+    .nav__link:hover {
       color: #00acdc; }
 
 .is-active {
@@ -48,7 +52,7 @@
     right: 0;
     bottom: 0;
     background: #00acdc;
-    border-radius: 8px; }
+    border-radius: 2px; }
 
 .main {
   -webkit-box-sizing: border-box;
@@ -149,7 +153,6 @@
     height: 40px;
     background: #00acdc;
     border-radius: 5px;
-    border: none;
     color: #fff;
     text-decoration: none;
     cursor: pointer;
@@ -159,8 +162,8 @@
     text-transform: uppercase;
     margin-top: 20px; }
     .card__buy:hover {
-      background-color: #fff;
       border: 1px solid #00acdc;
+      background-color: #fff;
       color: #00acdc; }
 
 .stars {
