--- a/styles/main.css
+++ b/styles/main.css
@@ -56,13 +56,8 @@
 .main {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
+  display: grid;
+  grid-template-columns: repeat(4, 200px);
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
