--- a/styles/main.css
+++ b/styles/main.css
@@ -54,22 +54,18 @@
     border-radius: 2px; }
 
 .main {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
   display: grid;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   grid-template-columns: repeat(4, 200px);
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  margin: 50px auto 0;
-  padding-left: 40px;
-  padding-right: 40px;
-  max-width: 1024px; }
+  -webkit-column-gap: 48px;
+     -moz-column-gap: 48px;
+          column-gap: 48px;
+  row-gap: 50px;
+  padding-top: 50px; }
 
 .card {
-  margin-bottom: 50px;
   width: 200px;
   height: 403px;
   background: white;
